general cleanup and refactoring.